# GSPARC

./: CMakeLists.txt  Dockerfile  README.md  main.cu
baselines/ALTO/: CMakeLists.txt  config.mk
baselines/ALTO/include/: alto.hpp  common.hpp  sptensor.hpp
baselines/ALTO/scripts/: create_alto.sh
baselines/ALTO/src/: main.cpp  sptensor.cpp
baselines/BLCO/: CMakeLists.txt  config.mk
baselines/BLCO/include/: alto.hpp  alto_dev.hpp  blco.hpp  cpd.hpp  utils.hpp
baselines/BLCO/mk/: include_NVCC.mk
baselines/BLCO/scripts/: create_blco.sh
baselines/BLCO/src/: alto_dev.cu  blco.cu  main.cpp  sptensor.cpp
baselines/GspTC/: CMakeLists.txt  main.cu
baselines/GspTC/include/: cmdline_parser.hpp  common.hpp  contraction.cuh  cuda_memory.cuh  helper.hpp  partition.hpp  pinned_memory.cuh  sort.hpp  sptensor.hpp
baselines/GspTC/include/common/: timer.hpp
baselines/GspTC/src/: cmdline_parser.cpp  common.cpp  partition.cpp  sort.cpp  sptensor.cpp
baselines/GspTC/src/common/: timer.cpp
baselines/Sparta/: CMakeLists.txt
baselines/Sparta/benchmark/: ttt.c
baselines/Sparta/include/includes/: sptensors.h  types.h
baselines/Sparta/run/: run_gsptc.sh  run_hash_storage.sh  test_run.sh
baselines/Sparta/src/: base.c
baselines/Sparta/src/sptensor/: load.c  sort.c  status.c  tmul.c
expected-figure/: table4.csv
include/common/: bitops.hpp  cuda_helper.hpp  size.hpp
include/gsparc/: cmdline_opts.hpp  contraction.cuh  contraction_extra.cuh  cuda_memory.hpp  cuda_memory_allocator.hpp  helper.hpp  indexMatch.cuh  io_manager.hpp  io_manager.tpp  slitom.hpp  slitom.tpp  sort.cuh  sparse_tensor.hpp  sparse_tensor.tpp  sptc.cuh  tensor.hpp  tensor.tpp  tensor_manager.hpp  tensor_manager.tpp  timer.hpp
scripts/: Figure_10b.sh  Figure_11a.sh  Figure_8_GspTC.sh  Figure_8_Sparta.sh  Figure_9a_ALTO.sh  Figure_9a_BLCO.sh  Table_4.sh  create_figure.sh  download_data.sh  run_GSPARC.sh  run_all_exp.sh  sample_GSPARC.sh
scripts/figure/: Table4.py  figure10b.py  figure11a.py  figure8.py  figure9a.py
src/common/: cuda_helper.cpp
src/gsparc/: cmdline_opts.cpp  cuda_memory.cpp  timer.cpp
